# clarifi-v2

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml
.claude/commands/: new-endpoint.md  new-inspector.md  new-migration.md  phase1.md
backend/: CLAUDE.md  Dockerfile  pyproject.toml
backend/app/engine/: CLAUDE.md
backend/app/engine/inspectors/: accuracy.py  base.py  completeness.py  consistency.py  format.py  uniqueness.py
docker/: nginx.conf  redis.conf
docs/: 00-MASTER-PLAN.md  01-BACKEND-SPEC.md  02-FRONTEND-SPEC.md  03-DATA-ENGINE-SPEC.md  04-INFRASTRUCTURE-SPEC.md  05-DATABASE-MIGRATIONS.md  06-API-CONTRACT.md
frontend/: CLAUDE.md  Dockerfile
