[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]

name = "clarifi-backend"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Auth
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.0",

    # Data processing (the core engine)
    "polars>=1.0.0",
    "openpyxl>=3.1.0",

    # Redis + task queue
    "redis[asyncio]>=5.0.0",
    "arq>=0.25.0",

    # File storage
    "boto3>=1.34.0",

    # LLM
    "litellm>=1.40.0",

    # Config
    "pydantic-settings>=2.0.0",

    # Logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]